k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: palashgupta94/backend:v1.0.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: backend-data
              mountPath: /data
      volumes:
        - name: backend-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
